# lite3_sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_connection.py  verify_sdk.py  运动主机通讯接口.md  运动主机通讯接口.txt
examples/: basic_usage.py  camera_demo.py  keyboard_control.py  keyboard_control_linux.py  keyboard_control_tui.py  stand_sit_demo.py  status_monitor.py
lite3_sdk/: __init__.py  camera_client.py  client.py
lite3_sdk/commands/: __init__.py  base.py  command_codes.py  gait_action.py  motion.py  state.py
lite3_sdk/models/: __init__.py  joints.py  robot_state.py
lite3_sdk/network/: __init__.py  message_parser.py  udp_client.py
tests/: test_basic.py
