[project]
name = "lite3_sdk"
version = "1.0.0"
description = "绝影Lite3机器人运动控制SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lite3_sdk"]
